fixed table spacing and changed table colors

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,6 +21,12 @@ font-weight: lighter;
 font-family: sans-serif;
 }
 
+a:link{
+  color: #000;
+  font-weight: lighter;
+  font-family: sans-serif;
+}
+
 .loader,
 .loader:before,
 .loader:after {
@@ -198,9 +204,12 @@ right: 0;
 top: 0;
 z-index: 99;
 }
+
+
+
 .container th h1 {
 font-weight: lighter;
-font-size: 1.5em;
+font-size: 1em;
 text-align: left;
 color: #00FFDC;
 font-family: sans-serif;
@@ -229,17 +238,17 @@ font-family: sans-serif;
   padding-left:2%;
 }
 
-/* Background-color of the odd rows */
+
 .container tr:nth-child(odd) {
-	  background-color: #323C50;
-    color: #fff;
+	  background-color: #dddddd;
+    color: #000;
     font-family: sans-serif;
     font-weight: lighter;
 }
 
-/* Background-color of the even rows */
+
 .container tr:nth-child(even) {
-	  background-color: #2C3446;
+	  background-color: #fff;
     color: #fff;
     font-family: sans-serif;
     font-weight: lighter;
@@ -253,11 +262,10 @@ font-family: sans-serif;
 }
 
 .container td:first-child {
-  color: #fff;
+  color: #dddddd;
   font-family: sans-serif;
   font-weight: lighter;
 }
-
 
 
 @media (max-width: 800px) {
